--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
@@ -9,9 +11,7 @@
   <body>
     <div id="canvas-container">
       <canvas id="game-canvas" width="400" height="400">
-        Snake is a popular game in which the user controls a snake-like line and moves it across the game board in order to eat food and grow longer. The object of the game is to become as long as possible, or equivalently, to earn the highest score. To that end, the user must take care to maneuver the snake in a way that avoids collision with itself or with the outer walls.
-
-        Unfortunately, your browser does not support canvas, which is needed in order for this game to run.
+        <p>Snake is a popular game in which the user controls a snake-like line and moves it across the game board in order to eat food and grow longer. The object of the game is to become as long as possible, or equivalently, to earn the highest score. To that end, the user must take care to maneuver the snake in a way that avoids collision with itself or with the outer walls. Unfortunately, your browser does not support canvas, which is needed in order for this game to run.<p>
       </canvas>
     </div>
   </body>
